--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.12.0",
-    "datocms-client": "^3.4.12"
+    "datocms-client": "^3.4.12",
+    "jsonwebtoken": "^8.5.1",
+    "nookies": "^2.5.2"
   },
   "license": "MIT"
 }
